--- a/priv/rules/music.yml
+++ b/priv/rules/music.yml
@@ -10,7 +10,7 @@
     title_ru: Звуки музыки
     text_ru: Они раскрашивают этот мир в яркие цвета.
     image: /assets/achievements/anime/music_1.jpg
-    border_color: "#FBCEB1"
+    border_color: "#000000"
     topic_id: 222061
 
 - <<: *defaults
@@ -20,7 +20,7 @@
     title_ru: Там, где слова бессильны
     text_ru: Музыка – это язык, на котором душа общается с душою, стирая границы условностей.
     image: /assets/achievements/anime/music_2.jpg
-    border_color: "#9DB1CC"
+    border_color: "#000000"
 
 - <<: *defaults
   level: 3
@@ -29,7 +29,7 @@
     title_ru: Новая мелодия
     text_ru: В буре страстей и море эмоций рождаются композиции, способные изменить мир.
     image: /assets/achievements/anime/music_3.jpg
-    border_color: "#7FC7FF"
+    border_color: "#000000"
 
 - <<: *defaults
   level: 4
@@ -38,4 +38,4 @@
     title_ru: Играя на струнах души
     text_ru: Музыка – это не просто красивые мелодии, без нее сама жизнь была бы ошибкой.
     image: /assets/achievements/anime/music_4.gif
-    border_color: "#4D4234"
+    border_color: "#000000"
