--- a/priv/rules/music.yml
+++ b/priv/rules/music.yml
@@ -37,5 +37,5 @@
   metadata:
     title_ru: Играя на струнах души
     text_ru: Музыка – это не просто красивые мелодии, без нее сама жизнь была бы ошибкой.
-    image: /assets/achievements/anime/music_4.gif
+    image: /i.gifer.com/XUWR.gif
     border_color: "#4D4234"
