--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -602,7 +602,7 @@
     - 36729
     - 38784
     - 40761
-  threshold: 90%
+  threshold: 89.9%
   metadata: &61
     title_ru: Судьба
     title_en: Fate
@@ -1060,7 +1060,7 @@
     - 37902
     - 38419
     - 40181
-  threshold: 95%
+  threshold: 95.4%
   metadata: &111
     title_ru: Ван-Пис
     title_en: One Piece
@@ -1576,7 +1576,7 @@
     - 41189
     - 41204
     - 42600
-  threshold: 95.6%
+  threshold: 95.9%
   metadata: &169
     title_ru: Живая любовь!
     title_en: Love Live!
@@ -2591,7 +2591,7 @@
     franchise: inuyasha
     not_anime_ids:
     - 31133
-  threshold: 94%
+  threshold: 94.1%
   metadata: &271
     title_ru: Инуяся
     title_en: InuYasha
@@ -3812,7 +3812,7 @@
     franchise: digimon
     not_anime_ids:
     - 4712
-  threshold: 92%
+  threshold: 92.1%
   metadata: &402
     title_ru: Приключения Дигимонов
     title_en: Digimon Adventure
@@ -4279,7 +4279,7 @@
     - 38646
     - 38647
     - 38648
-  threshold: 89.4%
+  threshold: 88.7%
   metadata: &448
     title_ru: При Пара
     title_en: PriPara
@@ -4806,48 +4806,85 @@
 - neko_id: quanzhi_gaoshou
   level: 1
   algo: duration
-  filters: 
+  filters: &503
     franchise: quanzhi_gaoshou
   threshold: 100%
-  metadata: 
+  metadata: &504
     title_ru: Аватар короля
     title_en: Quanzhi Gaoshou
-    image: https://kawai.shikimori.org/system/user_images/thumbnail/34807/1226876.jpg
+    image: "/assets/achievements/anime/franchise/quanzhi_gaoshou.jpg"
     topic_id: 247360
+- neko_id: quanzhi_gaoshou
+  level: 0
+  algo: duration
+  filters: *503
+  threshold: 0.01
+  metadata: *504
 - neko_id: idolish7
   level: 1
   algo: duration
-  filters: 
+  filters: &505
     franchise: idolish7
     not_anime_ids:
+    - 32030
+    - 32031
+    - 32446
+    - 33420
+    - 35654
+    - 36289
+    - 37679
     - 37710
+    - 37863
+    - 38052
+    - 40900
+    - 40967
+    - 41099
+    - 41167
   threshold: 100%
-  metadata: 
+  metadata: &506
     title_ru: Семёрка идолов
     title_en: IDOLiSH7
-    image: https://kawai.shikimori.org/system/user_images/original/3807/1278071.jpg
+    image: "/assets/achievements/anime/franchise/idolish7.jpg"
     topic_id: 247360
+- neko_id: idolish7
+  level: 0
+  algo: duration
+  filters: *505
+  threshold: 0.01
+  metadata: *506
 - neko_id: golden_kamuy
   level: 1
   algo: duration
-  filters: 
+  filters: &507
     franchise: golden_kamuy
     not_anime_ids:
     - 37755
   threshold: 100%
-  metadata: 
+  metadata: &508
     title_ru: Золотое божество
     title_en: Golden Kamuy
-    image: https://dere.shikimori.org/system/user_images/original/45319/1310524.jpg
-    topic_id: 247360 
+    image: "/assets/achievements/anime/franchise/golden_kamuy.jpg"
+    topic_id: 247360
+- neko_id: golden_kamuy
+  level: 0
+  algo: duration
+  filters: *507
+  threshold: 0.01
+  metadata: *508
 - neko_id: gochuumon_wa_usagi_desu_ka
   level: 1
   algo: duration
-  filters: 
+  filters: &509
     franchise: gochuumon_wa_usagi_desu_ka
   threshold: 100%
-  metadata: 
+  metadata: &510
     title_ru: Заказывали кролика?
     title_en: Gochuumon wa Usagi Desu ka?
-    image: https://nyaa.shikimori.org/system/user_images/original/34807/1310500.jpg
+    image: "/assets/achievements/anime/franchise/gochuumon_wa_usagi_desu_ka.jpg"
     topic_id: 247360
+- neko_id: gochuumon_wa_usagi_desu_ka
+  level: 0
+  algo: duration
+  filters: *509
+  threshold: 0.01
+  metadata: *510
