--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -789,7 +789,7 @@
   metadata: &81
     title_ru: Данганронпа
     title_en: Danganronpa
-    image: "/assets/achievements/anime/franchise/danganronpa.jpg"
+    image: "https://i.ytimg.com/vi/MouMU-1qoPc/maxresdefault.jpg"
     topic_id: 247360
 - neko_id: danganronpa
   level: 0
