--- a/priv/rules/otaku.yml
+++ b/priv/rules/otaku.yml
@@ -8,9 +8,9 @@
       - 9
       - 12
   metadata:
-    title_ru: Эскапизм
-    text_ru: Иллюзии захватывают ваш разум.
-    image: /assets/achievements/anime/otaku_1.jpg
+    title_ru: Разврат нахуй
+    text_ru: Этим членом можно пронзать небеса!
+    image: https://camo-v2.shikimori.one/c6e8440d073ada0d3be4801a6821afb972e6e73a?url=https%3A%2F%2Fd.radikal.ru%2Fd34%2F2101%2Fa8%2F6d21348a1941.jpg
     border_color: "#FFDC33"
     topic_id: 227426
 
