--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -4982,3 +4982,14 @@
   filters: *521
   threshold: 0.01
   metadata: *522
+- neko_id: wan_jie_xian_zong
+  level: 1
+  algo: duration
+  filters: 
+    franchise: wan_jie_xian_zong
+  threshold: 100%
+  metadata:
+    title_ru: Страна десяти тысяч чудес
+    title_en: Wan Jie Xian Zong
+    image: https://desu.shikimori.org/system/user_images/original/45319/1471503.jpg
+    topic_id: 247360
